[package]
name = "orient"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# http = "0.2"
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0"
egui_extras = { version = "0.20.0", features = ["image", "svg"] }
egui_dock = { version = "0.3.0", features = ["serde"] }

# feature "http":
ureq = { version = "2.5.0", features = ["json"] }
#reqwest = { version = "0.11", features = ["blocking", "json"] }

rfd = "0.10"
zip = "0.6.3"
openapiv3 = "1.0.1"

syntect = { version = "5", default-features = false, features = [
    "parsing", "default-themes",
    "default-fancy",
] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
