[package]
name = "reston"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
egui = { version = "0.21.0", features = ["color-hex"] }
#eframe = { version = "0.21.0", features = ["dark-light", "persistence"] }
eframe = { version = "0.21.0", features = ["persistence"] }
egui_extras = { version = "0.21.0", features = ["svg", "tracing"] }
egui_dock = { version = "0.4", features = ["serde"] }
color-hex = "0.2.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0"
image = "0.24"

# feature "http":
ureq = { version = "2.6.2", features = ["json"] }
url = { version = "2", features = ["serde"] }
#reqwest = { version = "0.11", features = ["blocking", "json"] }

rfd = "0.10"
zip = "0.6"
openapiv3 = "1.0.2"

syntect = { version = "5", default-features = false, features = [
    "parsing", "default-themes",
    "default-fancy",
] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
