[package]
name = "reston"
version = "0.1.0"
edition = "2021"
publish = false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
egui = { version = "0.24", features = ["color-hex"] }
#eframe = { version = "0.21", features = ["dark-light", "persistence"] }
eframe = { version = "0.24", features = ["persistence"] }
egui_extras = { version = "0.24", features = ["svg"] }
egui_dock = { version = "0.9", features = ["serde"] }
color-hex = "0.2"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0"
image = "0.24"
font-kit = "0.11"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
sublime_fuzzy = "0.7"
parking_lot = "0.12"

# feature "http":
ureq = { version = "2.9.1" }
nom = { version = "7" }
# minreq = "2.7.0"
# url = { version = "2", features = ["serde"] }
# url-escape = "0.1.1"
#reqwest = { version = "0.11", features = ["blocking", "json"] }

rfd = "0.12"
zip = "0.6"
# openapiv3 = "1.0"
material-icons = "0.2"

syntect = { version = "5", default-features = false, features = [
    "parsing", "default-themes",
    "default-fancy",
] }

[dependencies.uuid]
version = "1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
